--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@averjs/nuxt-compression": "^1.2.2",
     "@nuxt/devtools": "latest",
     "@nuxt/image": "^1.0.0",
+    "@nuxtjs/strapi": "^1.9.3",
     "@nuxtjs/tailwindcss": "^6.9.4",
     "autoprefixer": "^10.4.16",
     "compression-webpack-plugin": "^10.0.0",
