--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@averjs/nuxt-compression": "^1.2.2",
     "@nuxt/devtools": "latest",
     "@nuxt/image": "^1.0.0",
+    "@nuxtjs/i18n": "^8.0.0-rc.5",
     "@nuxtjs/tailwindcss": "^6.9.4",
     "autoprefixer": "^10.4.16",
     "compression-webpack-plugin": "^10.0.0",
@@ -25,6 +26,7 @@
     "tailwindcss": "^3.3.5",
     "vite-plugin-compression": "^0.5.1",
     "vue": "^3.3.8",
+    "vue-i18n": "^9.8.0",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
@@ -41,6 +43,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "nuxt-compress": "^5.0.0",
+    "nuxt-i18n": "^6.28.1",
     "nuxt-precompress": "^0.5.9",
     "nuxt-speedkit": "^2.2.3",
     "request": "^2.88.2",
