--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "nuxt-i18n": "^6.28.1",
     "nuxt-precompress": "^0.5.9",
     "nuxt-speedkit": "^2.2.3",
+    "nuxt3-meta-pixel": "^1.0.9",
     "request": "^2.88.2",
     "v3-infinite-loading": "^1.3.1",
     "vscode": "^1.1.37"
