--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "@nuxt-modules/compression": "^0.1.0",
     "@nuxt/content": "^2.9.0",
     "@nuxtjs/axios": "^5.13.6",
+    "@nuxtjs/dotenv": "^1.4.2",
     "@nuxtjs/sitemap": "^2.4.0",
+    "@sendgrid/mail": "^8.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
